# hn-bookmarks

./: .gitignore  README.md  bsconfig.json  graphql_schema.json  package-lock.json  package.json
.graphql_ppx_cache/: graphql_schema.json.hash  graphql_schema.json.marshaled
server/: Gemfile  README.md  cabal.sandbox.config  config.ru  server.cabal  stack.yaml
server/app/controllers/: application_controller.rb  bookmarks_controller.rb
server/app/models/: bookmark.rb
server/app/types/: bookmark_type.rb
server/config/: application.rb  database.yml
server/db/: database.rb  seed.rb
server/db/migrate/: .#001_create_bookmarks.rb  001_create_bookmarks.rb
server/src/: Database.hs
src/: App.bs.js  App.re  BookmarksList.bs.js  BookmarksList.re  Header.bs.js  Header.re  Index.bs.js  Index.re  Link.bs.js  Link.re  RatingCounter.bs.js  RatingCounter.re  index.html
