name: server
version: 0.0.0.0
author: Nicholas Yang
copyright: 2018 Nicholas Yang
category: Web
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Database
                 , Model
                 , View
                 , Controller
  ghc-options:   -ddump-minimal-imports -fwarn-unused-imports
  build-depends: base
               , snap
               , text
               , hashmap
               , aeson
               , data-default-class
               , monad-control
               , monad-logger
               , resourcet
               , bytestring
               , transformers
               , persistent
               , persistent-sqlite
               , persistent-template
  default-language:    Haskell2010

executable server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-minimal-imports -fwarn-unused-imports
  build-depends:       base
                     , server
                     , snap == 0.14.*
  default-language:    Haskell2010
                                                             